<resources>
    <string name="app_name">Cipher Breaker</string>

    <string name="presmyslovnik">Dictionary Searcher</string>
    <string name="debinarizator">Binary Reader</string>
    <string name="deternarizator">Ternary Reader</string>
    <string name="griller">Grille Helper</string>
    <string name="mrizkodrtic">Grille Hacker</string>
    <string name="azimuther">Azimuth Finder</string>
    <string name="calendar">Name Day Searcher</string>
    <string name="number_analyzer">Number Analyzer</string>
    <string name="playfair">Playfair Helper</string>
    <string name="principtrainer">Princip Trainer</string>
    <string name="about">About</string>

    <string name="about_description">This app was created to help with Puzzle Hunt competitions.
\n\nNote that it contains powerful tools and usage of some of them
might be against the rules of particular Puzzle Hunts.
\n\nSuggestions or contributions on GitHub are welcome.
</string>
    <string name="about_version">Version 1.5.0</string>
    <string name="about_email">adam.sikora73@gmail.com</string>
    <string name="about_github"><a href="https://github.com/adamsikora/CipherBreaker">GitHub repository</a></string>
    <string name="about_copyright">© Adam Sikora 2023–2025</string>

    <string name="go">Go</string>

    <string-array name="presmyslovnik_mode">
        <item>Regex</item>
        <item>Subanagram</item>
        <item>Anagram</item>
        <item>Superanagram</item>
        <item>Hamming</item>
        <item>Levenshtein</item>
        <item># Morse</item>
        <item># Braille</item>
        <item># Segments</item>
        <item># Moves</item>
        <item># Holes</item>
        <item># Ends</item>
    </string-array>

    <string-array name="presmyslovnik_dictionary">
        <item>EN</item>
        <item>CZ nouns</item>
        <item>CZ</item>
        <item>CZ big</item>
        <item>Prague</item>
        <item>Brno</item>
        <item>Czechia</item>
    </string-array>

    <string-array name="days">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="days_in_week">
        <item>-</item>
        <item>Po</item>
        <item>Ut</item>
        <item>St</item>
        <item>Ct</item>
        <item>Pa</item>
        <item>So</item>
        <item>Ne</item>
    </string-array>

    <string-array name="months">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="sizes">
        <item>4x4</item>
        <item>5x5</item>
        <item>6x6</item>
        <item>7x7</item>
        <item>8x8</item>
        <item>9x9</item>
        <item>10x10</item>
    </string-array>

    <string-array name="playfairSizes">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="input_type">
        <item>base-2</item>
        <item>base-3</item>
        <item>base-5</item>
        <item>base-7</item>
        <item>base-10</item>
        <item>base-16</item>
        <item>roman numerals</item>
    </string-array>

    <string-array name="output_type">
        <item>base-2</item>
        <item>base-3</item>
        <item>base-5</item>
        <item>base-7</item>
        <item>base-10</item>
        <item>base-16</item>
        <item>roman numerals</item>
        <item>prime factors</item>
    </string-array>
</resources>
